[package]
name = "attrs"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = { version = "1.0.94", default-features = false }
syn = { version = "2.0.100", default-features = false, features = [
    "parsing",
    "derive",
] }

[dev-dependencies]
quote = { version = "1.0.40", default-features = false }
strum-lite = "0.1.1"
syn = { version = "*", default-features = false, features = [
    "printing",
    "extra-traits",
] }
